--- a/_config.yml
+++ b/_config.yml
@@ -18,16 +18,18 @@ email: gkroiz1@umbc.edu
 description: >- # this means to ignore newlines until "baseurl:"
   Personal Website for Gerson Kroiz.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: gkroiz@.ithub.io # the base hostname & protocol for your site, e.g. http://example.com
+url: gkroiz.github.io # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
 github_username:  gkroiz
-
+name: Gerson Kroiz
+author: Gerson Kroiz
 # Build settings
 markdown: kramdown
 theme: minima
 plugins:
   - jekyll-feed
   - jekyll-pdf-embed
+  - jekyll-seo-tag
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
