--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,7 @@ plugins:
   - jekyll-feed
   - jekyll-pdf-embed
   - jekyll-seo-tag
+  - jekyll-sitemap
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
@@ -41,3 +42,16 @@ plugins:
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
+
+
+defaults:
+  - scope:
+      path: ""
+      type: "posts"
+    values:
+      layout: "blog"
+  - scope:
+      path: ""
+    values:
+      image: ""
+      layout: "default"
