--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: gkroiz1@umbc.edu
 description: >- # this means to ignore newlines until "baseurl:"
   Personal Website for Gerson Kroiz.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: gkroiz.github.io # the base hostname & protocol for your site, e.g. http://example.com
+url: http://gkroiz.github.io # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
 github_username:  gkroiz
 name: Gerson Kroiz
@@ -45,14 +45,14 @@ plugins:
 #   - vendor/ruby/
 
 
-# defaults:
-#   - scope:
-#       path: ""
-#       type: "posts"
-#     values:
-#       layout: "null"
-#   - scope:
-#       path: ""
-#     values:
-#       image: ""
-#       layout: "null"
+defaults:
+  - scope:
+      path: ""
+      type: "posts"
+    values:
+      layout: "null"
+  - scope:
+      path: ""
+    values:
+      image: ""
+      layout: "null"
