--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Gerson Kroiz's Personal Website
-email: gkroiz1@umbc.edu
+# title: Gerson Kroiz's Personal Website
+email: gersonkroiz@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Personal Website for Gerson Kroiz.
 baseurl: "" # the subpath of your site, e.g. /blog
