--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-# title: Gerson Kroiz's Personal Website
+title: Gerson C. Kroiz
 email: gersonkroiz@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Personal Website for Gerson Kroiz.
@@ -24,7 +24,7 @@ github_username:  gkroiz
 name: Gerson Kroiz
 author: Gerson Kroiz
 # Build settings
-markdown: kramdown
+# markdown: kramdown
 theme: minima
 plugins:
   - jekyll-feed
